codepkg/objects/Payment_Request__c.object
<CustomObject>
    <fields>
        <fullName>AccrualNumber__c</fullName>
        <description>Accrual Number for a transaction in the system or provided by Accounting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Accrual Number for a transaction in the system or provided by Accounting</inlineHelpText>
        <label>Accrual Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Admin_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be selected if Admin Amount to be paid in the PR.</description>
        <inlineHelpText>This checkbox should be selected if Admin Amount to be paid in the PR.</inlineHelpText>
        <label>Allow Admin Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Non_Submission_Reason__c</fullName>
        <description>Approval Process No - Submission Reason.</description>
        <formula>IF(  NOT( OR( ISPICKVAL( Stage__c , &apos;Processing&apos;) ,ISPICKVAL( Stage__c , &apos;Reviewed - Needs Information&apos;))) , &apos;Stage should be either &quot;Processing&quot; or &quot;Reviewed - Needs Information&quot;&apos; , &apos;&apos;)</formula>
        <label>Approval Process Submission Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovedFederalPaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is copy of &quot;Federal Estimated payment Amount&quot;. This is used for overriding purpose.</description>
        <inlineHelpText>Copy of &quot;Federal Estimated payment Amount&quot;</inlineHelpText>
        <label>Approved Federal Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedStatePaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is a copy of &quot;State Estimated Payment Amount&quot;, which is used for Overriding purpose.</description>
        <inlineHelpText>Copy of &quot;State Estimated Payment Amount&quot;.</inlineHelpText>
        <label>Approved State Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Amount_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is Total Approved Payment Amount on PR excluding &quot;Total State Admin Share Amount&quot;.</description>
        <inlineHelpText>This field is Total Approved Payment Amount on PR excluding &quot;Total State Admin Share Amount&quot;.
[ Total Approved Payment Amount - Total Admin Share Amount ]</inlineHelpText>
        <label>Approved Amount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_State_Amount__c</fullName>
        <description>This field shows Actual State Amount Approved on PR.
[ Approved State Payment Amount - Total State Admin Share ]</description>
        <formula>ApprovedStatePaymentAmount__c - TotalAdminShareAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field shows Actual State Amount Approved on PR.
[ Approved State Payment Amount - Total State Admin Share ]</inlineHelpText>
        <label>Approved State Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_State_only_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Approved State Amount on Payment Request (Without Admin).</description>
        <inlineHelpText>Approved State Amount on Payment Request (Without Admin). 
[Approved Amount Total - Approved Federal Payment Amount]</inlineHelpText>
        <label>Approved State only Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>ALS- Depricated</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableAmount__c</fullName>
        <description>Available Amount for the Project.</description>
        <formula>Project__r.AmountAvailable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Available Amount for the Project.
[ Amount Available ( Project ) ]</inlineHelpText>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Award related to Project</description>
        <inlineHelpText>Award related to Project</inlineHelpText>
        <label>Award</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select the Award which is associated with the same Project and in &quot;Active&quot; Stage.</errorMessage>
            <filterItems>
                <field>Award__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetNumber__c</fullName>
        <description>Encumbrance Number of the Encumbrance.</description>
        <formula>Encumbrance__r.EncumbranceNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Encumbrance Number of the Encumbrance.
[ Encumbrance Number ( Encumbrance) ]</inlineHelpText>
        <label>Budget Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is to indicate specific conditions</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is to indicate specific conditions</inlineHelpText>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cumulative_State_Cost_Share_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the field value is greater than 2500, then it should be checked or else should be unchecked.</description>
        <inlineHelpText>If the field value is greater than 2500, then it should be checked or else should be unchecked.</inlineHelpText>
        <label>Cumulative State Cost Share Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnactmentYear__c</fullName>
        <description>The year the Invoice was submitted.</description>
        <inlineHelpText>The year the Invoice was submitted.</inlineHelpText>
        <label>Enactment Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY 21/22</fullName>
                </value>
                <value>
                    <fullName>FY 20/21</fullName>
                </value>
                <value>
                    <fullName>FY 19/20</fullName>
                </value>
                <value>
                    <fullName>FY 18/19</fullName>
                </value>
                <value>
                    <fullName>FY 17/18</fullName>
                </value>
                <value>
                    <fullName>FY 16/17</fullName>
                </value>
                <value>
                    <fullName>FY 15/16</fullName>
                </value>
                <value>
                    <fullName>FY 14/15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Encumbrance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Encumbrance of the Payment Request. Should have Same Funding Opportunity as Project.</description>
        <inlineHelpText>Encumbrance of the Payment Request. Should have Same Funding Opportunity as Project.</inlineHelpText>
        <label>Encumbrance</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select &quot;Encumbrance&quot;, which is having Same Funding Opportunity as &quot;Project&quot;.</errorMessage>
            <filterItems>
                <field>Encumberance__c.FundingOpportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Funding_Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Encumberance__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpenditurestoDate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Reimbursement request for the Project.</description>
        <inlineHelpText>Reimbursement request for the Project.</inlineHelpText>
        <label>Expenditures to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FIPS_ID__c</fullName>
        <description>&quot;FIPS ID&quot; of the &quot;Obligated Sub Recipient&quot; of the Project.</description>
        <formula>Project__r.Obligating_Sub_Recipient__r.Sub_Recipient_FIPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;FIPS ID&quot; of the &quot;Obligated Sub Recipient&quot; of the Project.</inlineHelpText>
        <label>FIPS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalAmountAvailable__c</fullName>
        <description>Total Federal Amount available for tis Project.</description>
        <formula>Project__r.FederalAmountAvailable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Federal Amount available for tis Project.
[ Federal Amount Available ( Project ) ]</inlineHelpText>
        <label>Federal Amount Available(Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FederalAmountDisbursed__c</fullName>
        <description>Total Federal Amount Disbursed for this Project.</description>
        <formula>Project__r.FederalAmountDisbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Federal Amount Disbursed for this Project.
[ Total Federal Amount Disbursed ( Project ) ]</inlineHelpText>
        <label>Federal Amount Disbursed (Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FederalEstimatedPaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Estimated Federal Payment Amount for this Payment Request.</description>
        <inlineHelpText>Estimated Federal Payment Amount for this Payment Request.
[ Federal Cost Share - Federal Retention - Total Federal Amount Approved(Project) ]</inlineHelpText>
        <label>Federal Estimated Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FederalRetentionShare__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Federal Share Retention amount for the Project. Only visible for GPU Analyst.</description>
        <inlineHelpText>Federal Share Retention amount for the Project.
[ Federal Cost Share * Federal Retention % (  Project ) ]</inlineHelpText>
        <label>Federal Retention Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FederalShareCost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Federal Share amount for the Project. Only visible for GPU Analyst.</description>
        <inlineHelpText>Federal Share amount for the Project.
[ Expenditures to Date * FEMA Share % ( Project ) ]</inlineHelpText>
        <label>Federal Cost Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To compare Funding Opportunity of Service Location / Encumbrance.
Used for Look up filter configuration.</description>
        <inlineHelpText>To compare Funding Opportunity of Service Location / Encumbrance.
Used for Look up filter configuration.</inlineHelpText>
        <label>Disaster Grant/FO</label>
        <referenceTo>Funding_Opportunity__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Review_Admin_Amount_Approved__c</fullName>
        <description>Admin Amount Approved of Project while Payment Request sent for Review</description>
        <inlineHelpText>Admin Amount Approved of Project while Payment Request sent for Review</inlineHelpText>
        <label>InReview Admin Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Review_FEMA_Share__c</fullName>
        <defaultValue>0</defaultValue>
        <description>FEMA Share of the Project on Which PR is calculated and sent for Review.</description>
        <inlineHelpText>FEMA Share of the Project on Which PR is calculated and sent for Review.
[FEMA Share(Project)]</inlineHelpText>
        <label>In Review FEMA Share%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_Review_Federal_Amount_Approved__c</fullName>
        <description>Federal Amount Approved of Project while Payment Request sent for Review</description>
        <inlineHelpText>Federal Amount Approved of Project while Payment Request sent for Review</inlineHelpText>
        <label>InReview Federal Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Review_Federal_Retention__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Federal Retention of the Project on Which PR is calculated and sent for Review.</description>
        <inlineHelpText>Federal Retention of the Project on Which PR is calculated and sent for Review.
[Federal Retentione(Project)]</inlineHelpText>
        <label>In Review Federal Retention%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_Review_State_Amount_Approved__c</fullName>
        <description>State Amount Approved of Project while Payment Request sent for Review</description>
        <inlineHelpText>State Amount Approved of Project while Payment Request sent for Review</inlineHelpText>
        <label>InReview State Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Review_State_Retention__c</fullName>
        <defaultValue>0</defaultValue>
        <description>State Retention of the Project on Which PR is calculated and sent for Review.</description>
        <inlineHelpText>State Retention of the Project on Which PR is calculated and sent for Review.
[ State Retention(Project)]</inlineHelpText>
        <label>In Review State Retention%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_Review_State_Share__c</fullName>
        <defaultValue>0</defaultValue>
        <description>State Share of the Project on Which PR is calculated and sent for Review.</description>
        <inlineHelpText>State Share of the Project on Which PR is calculated and sent for Review.
[State Share(Project)]</inlineHelpText>
        <label>In Review State Share%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IncidentName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Incident Name of the Project.</description>
        <inlineHelpText>Incident Name of the Project.</inlineHelpText>
        <label>Incident Name</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Share_Amount__c</fullName>
        <description>Local Share amount from Project.</description>
        <formula>Project__r.TotalProjectLocalAward__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Share amount from Project.</inlineHelpText>
        <label>Local Share Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager_Approved_Date_Time__c</fullName>
        <description>This field contains the Date/Time value when the Manager has Approved the PR.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field contains the Date/Time value when the Manager has Approved the PR.</inlineHelpText>
        <label>Manager Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Manager who approved this payment Request</description>
        <inlineHelpText>Name of Manager who approved this payment Request</inlineHelpText>
        <label>Manager Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manually_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Record is Updated Manually then this field Should be checked</description>
        <inlineHelpText>If Record is Updated Manually then this field Should be checked</inlineHelpText>
        <label>Manually Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObligatedAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field captures the information about the actual Sub - Recipient Agency, incase of a &quot;Mutual Aid&quot;.</description>
        <inlineHelpText>This field captures the information about the actual Sub - Recipient Agency, incase of a &quot;Mutual Aid&quot;.</inlineHelpText>
        <label>Obligated Agency (Mutual Aid Agency)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ObligatedSubRecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Obligating Sub recipient of the Project.</description>
        <inlineHelpText>Obligating Sub recipient of the Project.</inlineHelpText>
        <label>Obligated Sub Recipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Requests (Obligated Sub Recipient)</relationshipLabel>
        <relationshipName>Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OffsetToPaymentRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment Request to which this Offset is provided.</description>
        <inlineHelpText>Payment Request to which this Offset is provided.</inlineHelpText>
        <label>Offset To Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentDelivery__c</fullName>
        <description>Payment Delivery, Used for Transmittal Record creation.</description>
        <inlineHelpText>Payment Delivery, Used for Transmittal Record creation..</inlineHelpText>
        <label>Payment Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Expedited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <description>Type of a Payment Request</description>
        <inlineHelpText>Type of a Payment Request</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Offset</fullName>
                </value>
                <value>
                    <fullName>Mutual Aid</fullName>
                </value>
                <value>
                    <fullName>Final Payment</fullName>
                </value>
                <value>
                    <fullName>Returned Project Payment</fullName>
                </value>
                <value>
                    <fullName>DeObligation</fullName>
                    <isActive>false</isActive>
                    <label>De Obligation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeerReviewApprovedDate__c</fullName>
        <description>ALS- Depricated
Date when Peer Reviewer has approved the Payment Application and forwarded to Manager for review.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date when Peer Reviewer has approved the Payment Application and forwarded to Manager for review.</inlineHelpText>
        <label>Peer Review Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peer_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ALS- Depricated</description>
        <inlineHelpText>ALS- Depricated</inlineHelpText>
        <label>Peer Approver</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>CalOES GPU Standard User</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>CalOES Internal User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Admin_Amount_Available__c</fullName>
        <description>Pending Admin Amount Available on Project excluding Amount Approved.</description>
        <formula>Project__r.Net_Admin_Amount_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pending Admin Amount Available on Project excluding Amount Approved.</inlineHelpText>
        <label>Pending Admin Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Federal_Amount_Available__c</fullName>
        <description>Pending Federal Amount Available on Project excluding Retention and Amount Approved.</description>
        <formula>Project__r.Net_Federal_Amount_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pending Federal Amount Available on Project excluding Retention and Amount Approved.</inlineHelpText>
        <label>Pending Federal Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_State_Amount_Available__c</fullName>
        <description>Pending State Amount Available on Project excluding Retention and Amount Approved.</description>
        <formula>Project__r.Net_State_Amount_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pending State Amount Available on Project excluding Retention and Amount Approved.</inlineHelpText>
        <label>Pending State Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project for which this Payment is Requested?</description>
        <inlineHelpText>Project for which this Payment is Requested?</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_To_Withdraw__c</fullName>
        <description>This field contains the reason for Payment Request Withdrawal.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field contains the reason for Payment Request Withdrawal.</inlineHelpText>
        <label>Reason To Withdraw</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReimbursementEndDate__c</fullName>
        <description>End Date of Reimbursement</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>End Date of Reimbursement</inlineHelpText>
        <label>Reimbursement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReimbursementStartDate__c</fullName>
        <description>Start Date of Reimbursement</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date of Reimbursement</inlineHelpText>
        <label>Reimbursement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Pending_Admin_Amount_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Pending Admin Amount Available&quot; on the Project on Which PR is calculated and sent for Review(If  Admin Payment is allowed on PR).</description>
        <inlineHelpText>&quot;Pending Admin Amount Available&quot; on the Project on Which PR is calculated and sent for Review(If  Admin Payment is allowed on PR).
[Pending Admin Amount Available(Project)]</inlineHelpText>
        <label>Review Pending Admin Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewed_Admin_Amount_Approved_to_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field shows the &quot;Total Admin Amount Approved&quot; on the Project including the current Payment Request&apos;s &quot;Total Admin Share Amount&quot;.(Current Payment Request amount will get included when the PR gets Approved by the Manager.)</description>
        <inlineHelpText>This field shows the &quot;Total Admin Amount Approved&quot; on the Project including the current Payment Request&apos;s &quot;Total Admin Share Amount&quot;.(Current Payment Request amount will get included when the PR gets Approved by the Manager.)</inlineHelpText>
        <label>Reviewed Admin Amount Approved to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewed_Federal_Amount_Approved_to_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field shows the &quot;Total Federal Amount Approved&quot; on the Project including the current Payment Request&apos;s &quot;Approved Federal Payment Amount&quot;.(Current Payment Request amount will get included when the PR gets Approved by the Manager.)</description>
        <inlineHelpText>This field shows the &quot;Total Federal Amount Approved&quot; on the Project including the current Payment Request&apos;s &quot;Approved Federal Payment Amount&quot;.(Current Payment Request amount will get included when the PR gets Approved by the Manager.)</inlineHelpText>
        <label>Reviewed Federal Amount Approved to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewed_State_Amount_Approved_to_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field shows the State Amount Approved on the Project including this Payment Request Approved Amount.</description>
        <inlineHelpText>This field shows the &quot;Total State Amount Approved&quot; on the Project including the current Payment Request&apos;s &quot;Approved State Payment Amount&quot; excluding &quot;Total Admin Share Amount&quot;. (Current Payment Request amount will get included when the PR gets Approved by the Manager.)</inlineHelpText>
        <label>Reviewed State Amount Approved to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewed_State_and_Admin_Amount_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field shows the sum of &quot;Reviewed State Amount Approved to Date&quot; and &quot;Reviewed Admin Amount Approved to Date&quot; on the Project including this Payment Request Approved Amount. 
[ Reviewed Federal Amount Approved to Date + Reviewed State Amount Approved to Date + Reviewed Admin Amount Approved to Date ]</description>
        <inlineHelpText>This field shows the sum of &quot;Reviewed State Amount Approved to Date&quot; and &quot;Reviewed Admin Amount Approved to Date&quot; on the Project including this Payment Request Approved Amount. 
[ Reviewed State Amount Approved to Date + Reviewed Admin Amount Approved to Date ]</inlineHelpText>
        <label>Reviewed State and Admin Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewed_State_and_Fed_Amount_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field shows the sum of &quot;Reviewed Federal Amount Approved to Date&quot;  and &quot;Reviewed State Amount Approved to Date&quot; on the Project including this Payment Request Approved Amount.</description>
        <inlineHelpText>This field shows the sum of &quot;Reviewed Federal Amount Approved to Date&quot;  and &quot;Reviewed State Amount Approved to Date&quot; on the Project including this Payment Request Approved Amount. 
[ Reviewed Federal Amount Approved to Date + Reviewed State Amount Approved to Date ]</inlineHelpText>
        <label>Reviewed State and Fed Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewed_Total_Amount_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field shows the sum of &quot;Reviewed Federal Amount Approved to Date&quot;  and &quot;Reviewed State Amount Approved to Date&quot; on the Project including this Payment Request Approved Amount.</description>
        <inlineHelpText>This field shows the sum of &quot;Reviewed Federal Amount Approved to Date&quot;,  &quot;Reviewed State Amount Approved to Date&quot;, and &quot;Reviewed Admin Amount Approved to Date&quot; on the Project including this Payment Request Approved Amount. 
[ Reviewed Federal Amount Approved to Date + Reviewed State Amount Approved to Date + Reviewed Admin Amount Approved to Date ]</inlineHelpText>
        <label>Reviewed Total Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Location for the Payment Request. Should have same Funding Opportunity as Project.</description>
        <inlineHelpText>Service Location for the Payment Request. Should have same Funding Opportunity as Project.</inlineHelpText>
        <label>Service Location</label>
        <referenceTo>ServiceLocation__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>